changing some colors to make sure they pass the contrast  WAVE

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -123,7 +123,7 @@ nav ul li a {
 }
 
 .hero-details {
-    background-color: rgba(0, 209, 242, 0.8); 
+    background-color: rgba(206, 230, 233, 0.8); 
     padding: 15px;
     color: #003366;
 }
